--- a/MyShop/MyShop/Components/App.razor
+++ b/MyShop/MyShop/Components/App.razor
@@ -37,7 +37,8 @@
 
     <link href="_content/Blazored.Typeahead/blazored-typeahead.css" rel="stylesheet" />
     <!-- STYLESHEET -->
-    <link href="Style.css" rel="stylesheet" />
+    <link href="@Assets["Style.css"]" rel="stylesheet" />
+    <link href="~/style.css" rel="stylesheet" />
     <HeadOutlet />
 </head>
 
@@ -46,6 +47,7 @@
     <script src="_framework/blazor.web.js"></script>
 
     <script src="bootstrap/js/bootstrap.bundle.min.js"></script>
+    <script src="~/bootstrap/js/bootstrap.min.js"></script>
 
 
     <script src="font-awesome/js/all.min.js"></script>
